mobile text alignment

--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
             <div id ="introduction">
                 Hi there, I'm <strong>VY</strong>
                 <br>
-                I <strong >help</strong> people <strong id="intro-box">solve problems</strong>.
+                I <strong >help</strong> people <span><strong id="intro-box">solve problems</strong>.</span>
                 <br>
                 <strong>Glad you are here</strong>.
             </div>
