linked title icon to the page

--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
     <meta name="author" content="Vy-Tran">
     <title>Vy Tran's here</title>
     <link rel="stylesheet" type="text/css" href="assignment1.css">
+    <link rel="icon" type="image/png" href="pics/V.png"/>
 </head>
 <body id="index">
     <header>
