--- a/courses.html
+++ b/courses.html
@@ -13,6 +13,7 @@
         <meta name="author" content="Vy-Tran">
         <title>Vy Tran's here</title>
         <link rel="stylesheet" type="text/css" href="assignment1.css">
+        <link rel="icon" type="image/png" href="pics/V.png"/>
         <link rel="stylesheet" href="https://fonts.google.com/specimen/Oswald?vfquery=osw">
         <link rel="stylesheet" href="https://fonts.google.com/specimen/Bitter">
     </head>
