--- a/index.html
+++ b/index.html
@@ -90,23 +90,17 @@
             <h3>Software &amp; Web Developer.</h3>
             <br>
             <p>
-              Vy is a <strong>full-stack developer student</strong> based in Ottawa. 
-              She has always been fascinated by technology and the way it can solve complex problems, 
-              which is what drew her to pursue a career in software development.
+              Vy is a motivated student currently pursuing Computer programming studies at Algonquin College, based in Ottawa. 
+              With a deep-rooted interest in technology, Vy seeks to leverage her passion to tackle complex challenges in the field of <strong>software development</strong>.
             </p>
             <p>
-              She is studying computer programming at Algonquin College.
-              Her goal as a software developer is to create <strong>innovative solutions</strong> that make a real impact on people's lives. 
-              Whether it's building a new app or website, 
-              she's always looking for ways to challenge herself and grow as a developer.
+              Drawing upon her background in finance, Vy possesses an exceptional eye for detail and a strong aptitude for <strong>project management</strong> and <strong>analysis</strong>. 
+              She strives to develop innovative software solutions that have a tangible impact on society.
             </p>
             <p>
-              With a background in finance, her super power is <strong>detail-oriented</strong>. 
-              She possess strong project management skills and analytical skills, which make her valuable contributor to the field of software development.
-            </p>
-            <p>
-              She is currently looking for a <strong>Software Developer/Data analyst Coop</strong> opportunity for Summer 2023. 
-              If you know of any available positions or would like to discuss more about her skills, please <a href="mailto:vytran1805@gmail.com"><em><strong>get in touch!</strong></em></a>             
+              As a driven individual, Vy is constantly seeking opportunities to enhance her skills and knowledge base, making her a valuable asset to the software development industry.
+              In this regard, she is actively looking for a <strong>Software Developer/Data Analyst Coop position for the summer of 2023</strong>. If you have any information regarding available positions 
+              or would like to learn more about her qualifications, please do not hesitate to <a href="mailto:vytran1805@gmail.com"><em><strong>get in touch!</strong></em></a>             
             </p>
           </div>
         </div>
@@ -211,12 +205,19 @@
               <h5>2022 - 2024</h5>
               <p><em>Algonquin College, Ottawa, ON, Canada</em></p>
               <p>Dean's Honour List, GPA: 3.85/4.0</p>
+              <p>
+                <strong>Coursework</strong>: Mobile Programming (Android development), Object - Oriented Programming, Operating Systems, Database Systems (PL/SQL), 
+                Web Programming, Data Analytics, Network Programming, Business Intelligence and Data Analytics
+              </p>
             </div>
             <div class="resume-item">
               <h4>Bachelor of Finance</h4>
               <h5>2012 - 2016</h5>
               <p><em>University of Economics, Ho Chi Minh City, Vietnam</em></p>
               <p>GPA: 3.3/4.0</p>
+              <p>
+                <strong>Coursework</strong>: Statistics, Linear Algebra, Analysis Mathematics
+              </p>
             </div>
           </div>
           <div class="col-lg-6">
@@ -227,14 +228,11 @@
               <p><em>Java/JDBC/SQL </em></p>
               <ul>
                 <li>
-                  Developed a program that provides a menu driven console interface allows users to create accounts, access their accounts to deposit/withdraw 
-                  money, and view balances.
+                  Designed and implemented a Java-based banking application using Strategy Design Pattern which enables users to create accounts, 
+                  perform deposit and withdrawal transactions, and review balances
                 </li>
-                <li>Included try catch block to handle abnormal termination of the application such as invalid input type and 
-                  negative numbers.
-                   </li>
-                <li>Implemented Data Access Object (DAO) pattern to abstract and encapsulate all access to the data source.</li>
-                <li>Used JDBC to handle transactions and access a database that stores accounts and customer information.</li>
+                <li>Implemented Data Access Object design pattern to abstract and encapsulate all access to the data sourc</li>
+                <li>Utilized JDBC to handle transactions and gain access to a database that securely stores accounts and customer information</li>
               </ul>
             </div>
             <div class="resume-item">
@@ -243,13 +241,11 @@
               <p><em>PHP/JavaScript/PHP/HTML/CSS/SQL</em></p>
               <ul>
                 <li>
-                  Built a robust, dynamic business website that included database interaction on the backend and a search
-                  function.
+                  Developed a resilient and versatile website, integrated database functionality on the backend, and incorporated a comprehensive search feature
                 </li>
-                <li>Created a registration form where users can log in or register a new account.                </li>
+                <li>Created a registration form where users can log in or register a new account</li>
                 <li>
-                  Included server-side and client-side validation to ensure users could not submit a form without first 
-                  fulfilling the requirements.
+                  Implemented server-side and client-side validation mechanisms that resulted in a 50% reduction in error rates for form submissions
                 </li>
               </ul>
             </div>
@@ -259,11 +255,10 @@
               <h5>January 2023</h5>
               <p><em>Weka</em></p>
               <ul>
-                <li>Computed missing values, grouped values into bins, converted data to the right types.</li>
-                <li>Performed classification using Decision Trees with 10-fold cross validation on the training model with 81% accuracy.</li>
+                <li>Analyzed Titanic survivors dataset and created machine learning algorithm using Weka to predict the survival of Titanic passengers</li>
+                <li>Performed classification using Decision Trees with 10-fold cross validation on the training model with 81% accuracy</li>
                 <li>
-                  Made a Survived prediction based on confusion matrix then compared the result to the actual information 
-                  of the incident.
+                  Projected the survival rate by utilizing the confusion matrix and compared the obtained outcomes with the actual incident information
                 </li>
               </ul>
             </div>
