--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <meta charset="utf-8">
   <meta content="width=device-width, initial-scale=1.0" name="viewport">
 
-  <title>Vy Tran here</title>
+  <title>Vivian here</title>
   <meta content="" name="description">
   <meta content="" name="keywords">
 
@@ -58,15 +58,15 @@
   <!-- ======= Hero Section ======= -->
   <section id="hero" class="d-flex flex-column justify-content-center">
     <div class="container" data-aos="zoom-in" data-aos-delay="100">
-      <h1>Vy Tran</h1>
+      <h1>Vivian Tran</h1>
       <p>Hi, I'm <strong><span class="typed" data-type-speed="60" data-typed-items="a Software Developer. "></span></strong></p>
       <p data-aos="fade-up" data-aos-delay="200">I help people <strong>solve problems.</strong></p>
       <p><span class="typed" data-typed-items="based in Ottawa"></span></p>
       <div class="social-links">
         <a href="https://www.instagram.com/vyy.nimalism/" class="instagram"><i class="bx bxl-instagram"></i></a>
         <a href="https://github.com/vytran1805" class="google-plus"><i class="bx bxl-github"></i></a>
-        <a href="https://www.linkedin.com/in/vytran1805/" class="linkedin"><i class="bx bxl-linkedin"></i></a>
-        <a href="assets/img/files/Resume_VyTran.pdf" class="resume"><i class="bx bx-file"></i></a>
+        <a href="https://www.linkedin.com/in/vivian1805/" class="linkedin"><i class="bx bxl-linkedin"></i></a>
+        <a href="assets/img/files/Vivian_Developer_Resume.pdf" class="resume"><i class="bx bx-file"></i></a>
       </div>
     </div>
   </section><!-- End Hero -->
@@ -90,17 +90,17 @@
             <h3>Software &amp; Web Developer.</h3>
             <br>
             <p>
-              Vy is a motivated student currently pursuing Computer programming studies at Algonquin College, based in Ottawa. 
-              With a deep-rooted interest in technology, Vy seeks to leverage her passion to tackle complex challenges in the field of <strong>software development</strong>.
+              Vivian is a motivated student currently pursuing Computer programming studies at Algonquin College, based in Ottawa. 
+              With a deep-rooted interest in technology, she seeks to leverage her passion to tackle complex challenges in the field of <strong>software development</strong>.
             </p>
             <p>
-              Drawing upon her background in finance, Vy possesses an exceptional eye for detail and a strong aptitude for <strong>project management</strong> and <strong>analysis</strong>. 
+              Drawing upon her background in finance, Vivian possesses an exceptional eye for detail and a strong aptitude for <strong>project management</strong> and <strong>analysis</strong>. 
               She strives to develop innovative software solutions that have a tangible impact on society.
             </p>
             <p>
-              As a driven individual, Vy is constantly seeking opportunities to enhance her skills and knowledge base, making her a valuable asset to the software development industry.
-              In this regard, she is actively looking for a <strong>Software Developer/Data Analyst Coop position for the summer of 2023</strong>. If you have any information regarding available positions 
-              or would like to learn more about her qualifications, please do not hesitate to <a href="mailto:vytran1805@gmail.com"><em><strong>get in touch!</strong></em></a>             
+              As a driven individual, she is constantly seeking opportunities to enhance her skills, making her a valuable asset to the software development industry.
+              In this regard, she is actively looking for a <strong>Software/Full stack Developer Coop position for the summer of 2023</strong>. If you have any information regarding available positions 
+              or would like to learn more about her qualifications, please do not hesitate to <a href="mailto:tran0472@algonquinlive.com"><em><strong>get in touch!</strong></em></a>             
             </p>
           </div>
         </div>
@@ -184,18 +184,18 @@
       <div class="container" data-aos="fade-up">
 
         <div class="section-title">
-          <h2>Resume <a href="assets/img/files/Resume_VyTran.pdf" class="resume"><i class="bx bx-file"></i></a></h2>
+          <h2>Resume <a href="assets/img/files/Vivian_Developer_Resume.pdf" class="resume"><i class="bx bx-file"></i></a></h2>
         </div>
         <div class="row">
           <div class="col-lg-6">
             <h3 class="resume-title">Sumary</h3>
             <div class="resume-item pb-0">
-              <h4>Vy Tran</h4>
+              <h4>Vivian Tran</h4>
               <p><em>Innovative and detailed-oriented software developer with a strong commitment to delivering elegant solutions in a timely and productive manner</em></p>
               <ul>
                 <li>Ottawa, ON, Canada</li>
                 <li>(343) 777-6141</li>
-                <li>vytran1805@gmail.com</li>
+                <li>tran0472@algonquinlive.com</li>
               </ul>
             </div>
 
@@ -331,7 +331,7 @@
               <div class="email">
                 <i class="bi bi-envelope"></i>
                 <h4>Email:</h4>
-                <p>vytran1805@gmail.com</p>
+                <p>tran0472@algonquinlive.com</p>
               </div>
 
               <div class="phone">
@@ -381,12 +381,12 @@
   <!-- ======= Footer ======= -->
   <footer id="footer">
     <div class="container">
-      <h3>Vy Tran</h3>
+      <h3>Vivian Tran</h3>
       <p>I help people sovle problems.</p>
       <div class="social-links">
         <a href="https://www.instagram.com/vyy.nimalism/" class="instagram"><i class="bx bxl-instagram"></i></a>
         <a href="https://github.com/vytran1805" class="github"><i class="bx bxl-github"></i></a>
-        <a href="https://www.linkedin.com/in/vytran1805/" class="linkedin"><i class="bx bxl-linkedin"></i></a>
+        <a href="https://www.linkedin.com/in/vivian1805/" class="linkedin"><i class="bx bxl-linkedin"></i></a>
       </div>
       <div class="copyright">
         &copy; Copyright <strong><span>MyResume</span></strong>. All Rights Reserved
